@@ -1,3 +1,6 @@
+2014-05-09  Jean-Louis Martineau <martineau@zmanda.com>
+	* client-src/sendsize.c: Fix compiler warning.
+
 2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>
 	* config/amanda/libs.m4: Search pkg-config in /opt/csw/bin.
 
